Name: vdom-event
Synopsis: Event driven vdom example.
Author: Clifford Beshers <clifford.beshers@gmail.com>
Cabal-version:  >= 1.22
build-type: Simple
version:    2015.3.21

Executable VDomEvent
  Main-Is: VDomEvent.hs
  Buildable: False
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  if impl(ghcjs)
     Build-Depends: 
         base, containers, data-default,
         ghcjs-base, ghcjs-ffiqq,
         ghcjs-vdom, ghcjs-dom, ghcjs-jquery,
         mtl, text, time
  -- , monad-supply

  Other-Extensions:
    TemplateHaskell
  ghcjs-Options:    -O

Executable byhand
  Main-Is: ByHand.hs
  Buildable: True
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  if impl(ghcjs)
     Build-Depends: 
         base, containers, data-default,
         ghcjs-base, ghcjs-ffiqq,
         ghcjs-vdom, ghcjs-dom, ghcjs-jquery,
         mtl, text, time
  -- , monad-supply

  Other-Extensions:
    TemplateHaskell
  ghcjs-Options:    -O

Executable TestDetach
  Main-Is: TestDetach.hs
  Buildable: False
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  if impl(ghcjs)
     Build-Depends: 
         base, data-default,
         ghcjs-base,
         ghcjs-jquery,
         mtl, ghcjs-dom,
         text
  Other-Extensions:
    TemplateHaskell
  ghcjs-Options:    -O

Executable TestDetachDOM
  Main-Is: TestDetachDOM.hs
  Buildable: False
  cpp-options: -DGHCJS_NO_CATCH_MAINLOOP
  Default-Language: Haskell2010
  if impl(ghcjs)
     Build-Depends: 
         base, data-default,
         ghcjs-base,
         ghcjs-jquery,
         mtl, ghcjs-dom,
         text
  Other-Extensions:
    TemplateHaskell
  ghcjs-Options:    -O

