Name: happstack-ghcjs-client
Version: 0.1
Author:         Clifford Beshers <beshers@seereason.com>
Maintainer:     Clifford Beshers <beshers@seereason.com>
License:        AllRightsReserved
Copyright:      (c) 2014, SeeReason Partners LLC
Synopsis:       Library and examples for building happstack applications with ghcjs/ghc
Description:    Library and examples for building happstack applications with ghcjs/ghc
category: Web
Cabal-version:  >= 1.9
build-type:     Custom
data-dir: ""
data-files:
    client/Common.hs
    client/Sortable.hs
    client/ClientServer.hs
    client/WebModule/SortableModule.hs
    client/WebModule/AJAXModule.hs

flag ghcjs
    description: Tell cabal we are using ghcjs (work around until hackage supports impl(ghcjs))
    default: True

-- This is compiled with ghcjs

flag local-happstack-ghcjs-webmodule
  Description: Build with local source files of the happstack-ghcjs-webmodule library.
  Default: False
  Manual: True

Executable happstack-ghcjs-client
  Hs-Source-Dirs:  client
  if flag (local-happstack-ghcjs-webmodule)
    Hs-Source-Dirs: ../happstack-ghcjs-webmodule
  else
    Build-Depends: happstack-ghcjs-webmodule

  Main-Is: ClientServer.hs
  if impl(ghcjs)
     cpp-options: -DCLIENT
  else
     cpp-options: -DSERVER
  Buildable: True
  cpp-options: -DCLIENT
  if flag (ghcjs)
     Build-Depends: ghcjs-base, ghcjs-dom >=0.1, ghcjs-jquery
  Extensions:
    TemplateHaskell
  Build-Depends:
     aeson,
     base >=4.2 && <5,
     blaze-builder,
     blaze-markup,
     blaze-html,
     bytestring >= 0.10,
     containers,
     data-default,
     filemanip,
     filepath,
     lens,
     lucid >0.9.1,
     mtl,
     network-uri,
     template-haskell,
     text,
     th-lift,
--     transformers,
     value-supply
