Name: happstack-ghcjs-server
Version: 0.1
Author: Clifford Beshers <beshers@seereason.com>
Maintainer:     Clifford Beshers <beshers@seereason.com>
License:        AllRightsReserved
Copyright:      (c) 2008-2011, SeeReason Partners LLC
Synopsis:       Library and examples for building happstack applications with ghcjs/ghc
Description:    Library and examples for building happstack applications with ghcjs/ghc
category: Web
Cabal-version:  >= 1.9
build-type:     Custom
data-dir: ""

Executable happstack-ghcjs-server
  Hs-Source-Dirs: server
  Main-Is: Server.hs
  Build-Depends:
     base >=4.2 && <5,
     blaze-html,
     bytestring,
     containers,
     directory,
     directory,
     filepath,
     file-embed,
     happstack-server,
     hslogger,
     mtl,
     text,
     time,
     web-routes,
     web-routes-th
