Name: happstack-ghcjs-server
Version: 0.1
Author: Clifford Beshers <beshers@seereason.com>
Maintainer:     Clifford Beshers <beshers@seereason.com>
License:        AllRightsReserved
Copyright:      (c) 2008-2011, SeeReason Partners LLC
Synopsis:       Library and examples for building happstack applications with ghcjs/ghc
Description:    Library and examples for building happstack applications with ghcjs/ghc
category: Web
Cabal-version:  >= 1.9
build-type:     Custom
data-dir: ""

flag local-development
  Description: Build with local source files of the sister client library.
  Default: False
  Manual: True

Executable happstack-ghcjs-server
  if flag (local-development)
     Hs-Source-Dirs: server, ../happstack-ghcjs-client/client
  else
     Hs-Source-Dirs: server, /usr/share/happstack-ghcjs
  Main-Is: Server.hs
  Build-Depends:
     aeson,
     base >=4.2 && <5,
     blaze-html,
     bytestring,
     containers,
     directory,
     directory,
     filepath,
     file-embed,
     happstack-server,
     hslogger,
     mtl,
     text,
     time,
     web-routes,
     web-routes-th
