Name: happstack-ghcjs-server
Version: 0.1
Author: Clifford Beshers <beshers@seereason.com>
Maintainer:     Clifford Beshers <beshers@seereason.com>
License:        AllRightsReserved
Copyright:      (c) 2008-2011, SeeReason Partners LLC
Synopsis:       Library and examples for building happstack applications with ghcjs/ghc
Description:    Library and examples for building happstack applications with ghcjs/ghc
category: Web
Cabal-version:  >= 1.9
build-type:     Custom
data-dir: ""

flag local-development
  Description: Build with local source files of happstack-ghcjs-client.
  Default: False
  Manual: True

flag local-happstack-ghcjs-webmodule
  Description: Build with local source files of happstack-ghcjs-webmodule.
  Default: False
  Manual: True

Executable happstack-ghcjs-server
  if impl(ghcjs)
     cpp-options: -DCLIENT
  else
     cpp-options: -DSERVER

  if flag (local-development)
     Hs-Source-Dirs: server, ../happstack-ghcjs-client/client, ../happstack-ghcjs-client
     cpp-options: -DSERVE_DYNAMIC
  else
     Hs-Source-Dirs: server, /usr/share/happstack-ghcjs-client, /usr/share/happstack-ghcjs-client/client

  if flag (local-happstack-ghcjs-webmodule)
     Hs-Source-Dirs: ../happstack-ghcjs-webmodule
     cpp-options: -DEMBEDDED_FILEPATH="../happstack-ghcjs-webmodule"
  else
     Build-Depends: happstack-ghcjs-webmodule

  Main-Is: /usr/share/happstack-ghcjs-client/client/ClientServer.hs
  GHC-options: -threaded -O2 -Wall -Wwarn -fno-warn-name-shadowing -fno-warn-type-defaults
  Extensions:
    PackageImports,
    TemplateHaskell
  Build-Depends:
     aeson,
     base >=4.2 && <5,
     base16-bytestring,
     blaze-html,
     bytestring,
     containers,
     cryptohash,
     data-default,
     directory,
     directory-tree,
     filepath,
     file-embed,
     happstack-server,
     hslogger,
     lens,
     lucid,
     mtl,
     network,
     network-uri,
     text,
     template-haskell,
     th-lift,
     time,
--     transformers,
     unix,
     value-supply
