Name: happstack-ghcjs-webmodule
Version: 0.1
Author: Clifford Beshers <beshers@seereason.com>
Maintainer:     Clifford Beshers <beshers@seereason.com>
License:        AllRightsReserved
Copyright:      (c) 2008-2011, SeeReason Partners LLC
Synopsis:       Library and examples for building happstack applications with ghcjs/ghc
Description:    Library and examples for building happstack applications with ghcjs/ghc
category: Web
Cabal-version:  >= 1.9
build-type:     Simple
data-dir: ""

flag local-development
  Description: Build with local source files of the sister client library.
  Default: False
  Manual: True

Library
  if impl(ghcjs)
    cpp-options: -DCLIENT
  else
    cpp-options: -DSERVER
  Hs-Source-Dirs: .
  GHC-options: -threaded -O2 -Wall
  if !impl(ghcjs)
    GHC-options: -Wwarn -fno-warn-name-shadowing -fno-warn-type-defaults
  Extensions:
    CPP,
    PackageImports,
    TemplateHaskell
  Exposed-modules: WebModule.AJAXModule
                   WebModule.BootstrapWebModule
                   WebModule.EmbedURI
                   WebModule.Favicon
                   WebModule.GHCJSWebModule
                   WebModule.GName
                   WebModule.JQueryUIWebModule
                   WebModule.JQueryWebModule
                   WebModule.Logger
                   WebModule.ManifestURL
                   WebModule.Markable
                   WebModule.ModuleScopeURL
                   WebModule.ServeEmbedded
                   WebModule.SortableModule
                   WebModule.Template
                   WebModule.WebModule
                   WebModule.WebModuleM
  if impl(ghcjs)
    Exposed-modules:
      ClientStub.Happstack.Server
      WebModule.GHCJSStub.JQuery
      WebModule.GHCJSStub.Types
  Build-Depends:
    aeson,
    base >=4.2 && <5,
    blaze-html,
    bytestring,
    data-default,
    data-lens,
    data-lens-template,
    filepath,
    lucid,
    mtl,
    network-uri,
    template-haskell,
    text,
    th-lift,
    transformers

  if impl(ghcjs)
    Build-Depends:
      ghcjs-base,
      ghcjs-jquery
  else
    Build-Depends:
      containers,
      directory-tree,
      file-embed,
      happstack-server,
      template-haskell,
      unix
